--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,34 +1,35 @@
 @font-face {
-  font-family: 'Benton Sans Book';
-  src: url('fonts/bentonsans-book.eot');
-  src: url('fonts/bentonsans-book.ttf') format('truetype'),
-       url('fonts/bentonsans-book.woff') format('woff');
+  font-family: 'Roboto';
+  src: url('../fonts/Roboto-Light.eot?#iefix') format('embedded-opentype'), url('../fonts/Roboto-Light.woff') format('woff'), url('../fonts/Roboto-Light.ttf') format('truetype'), url('../fonts/Roboto-Light.svg#Roboto-Light') format('svg');
+  font-weight: 300;
+  font-style: normal;
 }
 
 @font-face {
-  font-family: 'Benton Sans Medium';
-  src: url('fonts/bentonsans-medium.eot');
-  src: url('fonts/bentonsans-medium.ttf') format('truetype'),
-       url('fonts/bentonsans-medium.woff') format('woff');
+  font-family: 'Roboto';
+  src: url('../fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype'), url('../fonts/Roboto-Regular.woff') format('woff'), url('../fonts/Roboto-Regular.ttf') format('truetype'), url('../fonts/Roboto-Regular.svg#Roboto-Regular') format('svg');
+  font-weight: 400;
+  font-style: normal;
 }
 
 @font-face {
-  font-family: 'Benton Sans Regular';
-  src: url('fonts/bentonsans-regular.eot');
-  src: url('fonts/bentonsans-regular.ttf') format('truetype'),
-       url('fonts/bentonsans-regular.woff') format('woff');
+  font-family: 'Roboto';
+  src: url('../fonts/Roboto-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/Roboto-Bold.woff') format('woff'), url('../fonts/Roboto-Bold.ttf') format('truetype'), url('../fonts/Roboto-Bold.svg#Roboto-Bold') format('svg');
+  font-weight: 700;
+  font-style: normal;
 }
 
 * {
-  margin: 0 auto;
-  padding: 0;
-  font-family: 'Benton Sans Book', 'sans-serif';
+  font-family: 'Roboto', 'sans-serif';
 }
 
 @font-face {
   font-family: 'Linearicons';
-  src: url("fonts/Linearicons.eot?-m09hd");
-  src: url("fonts/Linearicons.eot?#iefix-m09hd") format("embedded-opentype"), url("fonts/Linearicons.woff?-m09hd") format("woff"), url("fonts/Linearicons.ttf?-m09hd") format("truetype"), url("fonts/Linearicons.svg?-m09hd#Linearicons") format("svg");
+  src: url("../fonts/Linearicons.eot?-m09hd");
+  src: url("../fonts/Linearicons.eot?#iefix-m09hd") format("embedded-opentype"),
+    url("../fonts/Linearicons.woff?-m09hd") format("woff"),
+    url("../fonts/Linearicons.ttf?-m09hd") format("truetype"),
+    url("../fonts/Linearicons.svg?-m09hd#Linearicons") format("svg");
   font-weight: normal;
   font-style: normal; }
 [class^="linearicon-"], [class*=" linearicon-"] {
