--- a/src/components/form-input/styles.css
+++ b/src/components/form-input/styles.css
@@ -11,7 +11,7 @@
 }
 
 .icon {
-  color: #2391e6;
+  color: #f7a80d;
   display: block;
   font-size: 1.2em;
   line-height: 37px;
@@ -47,7 +47,7 @@
 }
 
 .bar {
-  background-color: #2391e6;
+  background-color: #f7a80d;
   bottom: 0;
   height: 2px;
   position: absolute;
