--- a/src/components/form-input/styles.css
+++ b/src/components/form-input/styles.css
@@ -10,13 +10,19 @@
   margin-left: 0;
 }
 
+.container.hasError .bar {
+  background-color: red;
+  height: 1px;
+  width: 100%;
+}
+
 .icon {
   color: #f7a80d;
   display: block;
   font-size: 1.2em;
   line-height: 37px;
   text-align: center;
-  width: 40px;
+  width: 30px;
 }
 
 .inputContainer {
@@ -64,6 +70,15 @@
   pointer-events: none;
   position: absolute;
   transition: all .2s;
+}
+
+.errorText {
+  bottom: -18px;
+  color: red;
+  font-size: 12px;
+  font-weight: 300;
+  left: 0;
+  position: absolute;
 }
 
 /* COLORS
