--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -36,7 +36,8 @@ h1 {
   color: #ff5a00;
   font-size: 32px;
   line-height: 1.25em;
-  margin: 0;
+  margin: 0 0 40px;
+  text-transform: uppercase;
 }
 
 form { margin: 0; }
