--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -19,13 +19,11 @@
   font-style: normal;
 }
 
-* {
-  font-family: 'Roboto', 'sans-serif';
-}
+* { font-family: 'Roboto', 'sans-serif'; }
 
-a {
-  text-decoration: none;
-}
+body { margin: 0; }
+
+a { text-decoration: none; }
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 300;
