--- a/src/components/menu-item/styles.css
+++ b/src/components/menu-item/styles.css
@@ -1,19 +1,22 @@
 .container {
-  background-color: #2B343F;
+  background-color: #252d37;
   position: relative;
 }
 
 .container:hover, .container.isOpen {
-  background-color: #222a32;
+  background-color: #1c2228;
 }
 
 .title {
   color: #fff;
-  cursor: pointer;
   padding: 20px;
+  user-select: none;
 }
 
-.title:hover { background-color: #222a32; }
+.title:hover {
+  background-color: #1c2228;
+  cursor: pointer;
+}
 
 .title:hover h4,
 .title:hover i,
@@ -24,6 +27,7 @@
 
 .title h4 {
   display: inline-block;
+  font-size: 15px;
   margin: 0;
   margin-left: .7em;
 }
@@ -55,7 +59,7 @@
   color: rgba(255, 255, 255, 0.8);
   display: inline-block;
   font-weight: 300;
-  font-size: 15px;
+  font-size: 14px;
   padding: 7px 0 7px 28px;
   transition: color .3s;
   width: 100%;
@@ -68,13 +72,13 @@
 }
 
 .bar {
-  background-color: #2391e6;
+  background-color: #ff5a00;
   left: 0;
   height: 0;
   position: absolute;
   top: 0;
   transition: height .2s;
-  width: 4px;
+  width: 3px;
 }
 
 .isOpen .bar {
