--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -24,7 +24,11 @@
   outline: none;
 }
 
-body { margin: 0; }
+body {
+  background-color: #F6F6F6;
+  margin: 0;
+  overflow: hidden;
+}
 
 a { text-decoration: none; }
 
@@ -39,6 +43,13 @@ h1 {
   line-height: 1.25em;
   margin: 0 0 40px;
   text-transform: uppercase;
+}
+
+p {
+  color: #444;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 1.5;
 }
 
 form { margin: 0; }
