--- a/src/modules/dashboard/settings/styles.css
+++ b/src/modules/dashboard/settings/styles.css
@@ -9,7 +9,7 @@
 
 .container:hover .title,
 .container:hover .icon {
-  color: #999;
+  color: #ff5a00;
 }
 
 .image {
@@ -35,7 +35,7 @@
 
 .optionsContainer {
   background-color: white;
-  box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
+  box-shadow: 0 2px 4px -1px rgba(0,0,0,.15), 0 4px 5px 0 rgba(0,0,0,.09), 0 1px 10px 0 rgba(0,0,0,.07);
   padding: 5px 0;
   position: absolute;
   right: -50%;
