--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -4,10 +4,11 @@
   box-sizing: border-box;
   height: 57px;
   padding: 0 24px;
+  padding-left: 0;
   position: absolute;
   top: 0;
   right: 0;
-  left: 200px;
+  left: 0;
   z-index: 2;
 }
 
@@ -15,5 +16,16 @@
   cursor: pointer;
   font-size: 20px;
   line-height: 57px;
-  margin-right: 24px;
+  margin: 0 24px;
+}
+
+.logo {
+  display: inline-block;
+  width: 200px;
+}
+
+.logo img {
+  display: block;
+  margin: 0 auto;
+  width: 100px;
 }
