--- a/src/modules/user/coverphoto/styles.css
+++ b/src/modules/user/coverphoto/styles.css
@@ -1,17 +1,21 @@
 .coverphoto {
-  height: 150px;
-  background-size: cover;
+  align-items: center;
   background-position: 50%;
+  background-size: cover;
+  box-shadow: 0 1px 4px #b9b9b9;
+  display: flex;
+  height: 150px;
+  left: 0;
+  overflow: hidden;
   position: absolute;
   top: 0;
-  left: 0;
   width: 100%;
-  display: flex;
-  align-items: center;
 }
 
 .avatar {
   margin: 0 24px;
+  position: absolute;
+  z-index: 2;
 }
 
 .avatar img {
@@ -21,10 +25,14 @@
 
 h2 {
   color: #ff5a00;
-  padding: 5px 10px;
+  padding: 8px 10px;
   font-size: 18px;
   font-weight: 500;
-  border-radius: 3px;
   text-transform: uppercase;
-  background-color: rgba(255, 255, 255, .7);
+  background-color: rgba(255, 255, 255, .95);
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  margin: 0;
+  padding-left: 180px;
 }
