--- a/src/components/domain-search/styles.css
+++ b/src/components/domain-search/styles.css
@@ -1,5 +1,48 @@
 .container {
   display: flex;
   justify-content: center;
-  width: 90%;
+  width: 800px;
+  max-width: 100%;
+  margin: 0 auto;
+  box-shadow: 0 2px 4px #ddd;
+  margin-bottom: 40px;
+}
+
+.searchBar {
+  flex: 2;
+  height: 50px;
+  position: relative;
+}
+
+.input {
+  width: 100%;
+  height: 100%;
+  padding-left: 45px;
+  font-size: 16px;
+  font-weight: 300;
+  border: 1px solid #e1e1e1;
+}
+
+.searchIcon {
+  position: absolute;
+  left: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #a8b2b8;
+  font-weight: 800;
+}
+
+.button {
+  flex: 1;
+  height: 50px;
+  background-color: #ff5a00;
+  border: 0;
+  font-size: 16px;
+  color: #fff;
+  cursor: pointer;
+  transition: background .3s;
+}
+
+.button:hover {
+  background-color: #ff792f;
 }
