--- a/src/components/combo/styles.css
+++ b/src/components/combo/styles.css
@@ -13,6 +13,7 @@
   color: #303030;
   font-size: 12px;
   font-weight: 300;
+  overflow: hidden;
   position: relative;
   padding: 11px;
   user-select: none;
@@ -103,6 +104,8 @@
   display: none;
   list-style-type: none;
   margin: -1px 0 0 0;
+  max-height: 130px;
+  overflow-y: auto;
   padding: 0;
   position: absolute;
   width: 100%;
