--- a/src/components/domain-search/styles.css
+++ b/src/components/domain-search/styles.css
@@ -1,11 +1,12 @@
 .container {
+  border-radius: 23px;
+  box-shadow: 0 2px 4px #ddd;
   display: flex;
   justify-content: center;
-  width: 800px;
-  max-width: 100%;
-  margin: 0 auto;
-  box-shadow: 0 2px 4px #ddd;
   margin-bottom: 40px;
+  margin: 0 auto;
+  max-width: 100%;
+  width: 800px;
 }
 
 .searchBar {
@@ -15,34 +16,62 @@
 }
 
 .input {
-  width: 100%;
-  height: 100%;
-  padding-left: 45px;
+  border-bottom-left-radius: 23px;
+  border-top-left-radius: 23px;
+  border: 1px solid #e1e1e1;
   font-size: 16px;
   font-weight: 300;
-  border: 1px solid #e1e1e1;
+  height: 100%;
+  padding-left: 45px;
+  width: 100%;
+}
+
+.input::placeholder {
+  color: #e1e1e1;
 }
 
 .searchIcon {
-  position: absolute;
-  left: 15px;
-  top: 50%;
-  transform: translateY(-50%);
   color: #a8b2b8;
   font-weight: 800;
+  left: 15px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .button {
-  flex: 1;
-  height: 50px;
   background-color: #ff5a00;
+  border-bottom-right-radius: 23px;
+  border-top-right-radius: 23px;
   border: 0;
-  font-size: 16px;
   color: #fff;
   cursor: pointer;
+  flex: 1;
+  font-size: 16px;
+  height: 50px;
   transition: background .3s;
 }
 
 .button:hover {
   background-color: #ff792f;
+}
+
+@media screen and (max-width: 480px) {
+  .searchIcon {
+    font-size: 13px;
+    left: 10px;
+  }
+
+  .input {
+    font-size: 13px;
+    padding-left: 30px;
+  }
+
+  .title {
+    font-size: 20px;
+  }
+
+  .button {
+    font-size: 14px;
+  }
 }
