--- a/src/modules/user/password/user-password-form/styles.css
+++ b/src/modules/user/password/user-password-form/styles.css
@@ -11,3 +11,11 @@
 .container article:nth-child(2n+2) {
   margin-right: 0;
 }
+
+@media screen and (max-width: 768px) {
+  .container article {
+    flex-basis: 100%;
+    width: 100%;
+    margin-right: 0;
+  }
+}
