--- a/src/modules/dashboard/view/styles.css
+++ b/src/modules/dashboard/view/styles.css
@@ -11,6 +11,8 @@
 
 .card {
   background-color: white;
+  box-sizing: border-box;
+  min-height: 100%;
   padding: 48px 24px;
   position: relative;
 }
