Add styles to table

--- a/src/components/card/styles.css
+++ b/src/components/card/styles.css
@@ -2,7 +2,7 @@
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 5px 20px rgba(0,0,0,.15);
-  color: #4d4d4d;
+  color: #4d6171;
   margin: 15px 0;
   padding: 50px 30px;
   position: relative;
