--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -28,6 +28,7 @@ body {
   background-color: #F6F6F6;
   margin: 0;
   overflow-x: hidden;
+  color: #4d6171;
 }
 
 a { text-decoration: none; }
@@ -46,13 +47,38 @@ h1 {
 }
 
 p {
-  color: #444;
+  color: #4d6171;
   font-size: 15px;
   font-weight: 300;
   line-height: 1.5;
 }
 
 form { margin: 0; }
+
+table {
+  border-collapse: collapse;
+  border: 1px solid #eef0f3;
+  color: #4d6171;
+  font-size: 14px;
+  font-weight: 300;
+  overflow: hidden;
+  width: 100%;
+}
+
+thead th {
+  background-color: #f1f4f4;
+  color: #4d6171;
+  font-size: 12px;
+  font-weight: 600;
+  padding: 20px 10px;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+th, td {
+  border-bottom: 1px solid #eef0f3;
+  padding: 15px 10px;
+}
 
 @font-face {
   font-family: 'Linearicons';
