--- a/src/components/form-input/styles.css
+++ b/src/components/form-input/styles.css
@@ -28,9 +28,9 @@
 }
 
 .input {
-  border: 1px solid #e1e1e1;
+  border: 1px solid #eef0f3;
   border-radius: 3px;
-  color: #555;
+  color: #4d6171;
   font-size: 14px;
   font-weight: 300;
   height: 40px;
@@ -77,5 +77,5 @@
   #e1e1e1 = Gray color for input border-bottom
   #ddd = label color
   #ccc = label color on focus
-  #555 = Dark gray for input text color
+  #4d6171 = Dark gray for input text color
 */
