--- a/src/components/menu-item/styles.css
+++ b/src/components/menu-item/styles.css
@@ -66,7 +66,8 @@
   width: 100%;
 }
 
-.items a:hover { color: rgba(255, 255, 255, 1);; }
+.items a:hover,
+.items .active a { color: rgba(255, 255, 255, 1); }
 
 .isOpen .items {
   display: block;
