--- a/src/modules/dashboard/cart-resume/styles.css
+++ b/src/modules/dashboard/cart-resume/styles.css
@@ -1,23 +1,44 @@
 .container {
   float: right;
-  margin-top: 17px;
-  margin-right: 24px;
+  margin-top: 3px;
+  margin-right: 3px;
   position: relative;
 }
 
 .container:hover { cursor: pointer; }
 
-.container i { font-size: 1.5em; }
+.cart {
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  background-size: 700px 50px;
+}
+
+.cart.addItem {
+  animation-name: addItem;
+  animation-duration: .6s;
+  animation-timing-function: steps(13);
+  animation-fill-mode: forwards;
+}
+
+@keyframes addItem {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: right;
+  }
+}
 
 .counter {
-  background-color: #F44336;
+  background-color: #ff5a00;
   border-radius: 3px;
   color: white;
   font-size: .75em;
   padding: 1px 4px;
   position: absolute;
-  right: -5px;
-  top: -6px;
+  right: -1px;
+  top: 4px;
   user-select: none;
 }
 
