--- a/src/modules/dashboard/cart-resume/styles.css
+++ b/src/modules/dashboard/cart-resume/styles.css
@@ -1,7 +1,7 @@
 .container {
   float: right;
-  margin-top: 3px;
-  margin-right: 3px;
+  margin-top: 9px;
+  margin-right: 9px;
   position: relative;
 }
 
@@ -9,9 +9,9 @@
 
 .cart {
   cursor: pointer;
-  width: 50px;
-  height: 50px;
-  background-size: 700px 50px;
+  width: 40px;
+  height: 40px;
+  background-size: 560px 40px;
 }
 
 .cart.addItem {
@@ -31,16 +31,23 @@
 }
 
 .counter {
+  align-items: center;
   background-color: #ff5a00;
-  border-radius: 3px;
+  border-radius: 50%;
   color: white;
+  display: flex;
   font-size: .75em;
-  padding: 1px 4px;
+  height: 18px;
+  justify-content: center;
+  overflow: hidden;
   position: absolute;
-  right: -1px;
-  top: 4px;
+  right: -7px;
+  top: -1px;
   user-select: none;
+  width: 18px;
 }
+
+.counter span { font-size: 11px; }
 
 @media screen and (max-width: 480px) {
   .container {
