--- a/src/modules/home/products/styles.css
+++ b/src/modules/home/products/styles.css
@@ -8,17 +8,12 @@
   flex-basis: 30%;
 }
 
-.container article:nth-child(1) i {
-  line-height: 41px;
-}
-
 .container article:nth-child(2) i {
-  line-height: 33px;
+  margin-top: -5px;
 }
 
 .container article:nth-child(3) i {
-  line-height: 30px;
-  margin-left: 2px;
+  margin-top: -7px;
 }
 
 .container h3 {
