--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -55,13 +55,17 @@ p {
 
 form { margin: 0; }
 
+.table-container {
+  overflow-x: auto;
+  width: 100%;
+}
+
 table {
   border-collapse: collapse;
   border: 1px solid #eef0f3;
   color: #4d6171;
   font-size: 14px;
   font-weight: 300;
-  overflow: hidden;
   width: 100%;
 }
 
