--- a/src/modules/sales/product-details/view/styles.css
+++ b/src/modules/sales/product-details/view/styles.css
@@ -1,3 +1,24 @@
+.product {
+  border: 1px solid black;
+  text-align: center;
+  max-width: 300px;
+}
+
+.productHeader {
+  background-color: black;
+  color: white;
+  padding: .75em;
+}
+
+.productHeader h3 {
+  font-weight: 400;
+  margin: 0;
+}
+
+.productBody {
+  padding: .75em;
+}
+
 .link {
   cursor: pointer;
   font-size: 15px;
