Add payment detail view

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -29,6 +29,7 @@ body {
   margin: 0;
   overflow-x: hidden;
   color: #4d6171;
+  -webkit-font-smoothing: antialiased;
 }
 
 a { text-decoration: none; }
