--- a/src/modules/dashboard/settings/styles.css
+++ b/src/modules/dashboard/settings/styles.css
@@ -79,17 +79,11 @@
 }
 
 @media screen and (max-width: 768px) {
-  .title {
-    display: none;
-  }
+  .title { display: none; }
 
-  .image {
-    margin-right: 8px;
-  }
+  .image { margin-right: 8px; }
 }
 
 @media screen and (max-width: 480px) {
-  .container {
-    padding-left: 12px;
-  }
+  .container { padding-left: 0; }
 }
