--- a/src/modules/sales/payment-details/view/styles.css
+++ b/src/modules/sales/payment-details/view/styles.css
@@ -112,3 +112,32 @@
   height: 250px;
   background-color: blue;
 }
+
+@media screen and (max-width: 1024px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .cartContainer {
+    order: 1;
+    padding-left: 0;
+    margin-bottom: 30px;
+  }
+
+  .detail {
+    order: 2;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .itemContainer {
+    flex-direction: column;
+    align-items: left;
+  }
+
+  .itemContainer p {
+    margin-left: 0;
+    margin-top: 20px;
+    max-width: 100%;
+  }
+}
