--- a/src/components/table-pagination/styles.css
+++ b/src/components/table-pagination/styles.css
@@ -5,7 +5,7 @@
   padding-left: 0;
   font-weight: 300;
   font-size: 13px;
-  margin-top: 30px;
+  margin-top: 0;
   justify-content: flex-end;
 }
 
