--- a/src/modules/service/mails/view/styles.css
+++ b/src/modules/service/mails/view/styles.css
@@ -15,6 +15,8 @@
   justify-content: center;
 }
 
+.title i { margin-top: -7px; }
+
 @media screen and (max-width: 480px) {
   .title { flex-wrap: wrap; }
 
