--- a/src/components/modal/styles.css
+++ b/src/components/modal/styles.css
@@ -1,10 +1,73 @@
-.modal {
-  border: 3px solid black;
+.modalContainer {
+  align-items: center;
+  background-color: rgba(0,0,0,.6);
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  left: 0;
+  overflow-x: hidden;
+  padding: 30px 15px;
   position: fixed;
-  top: 30px;
-  bottom: 30px;
-  right: 30px;
-  left: 30px;
-  background-color: white;
+  text-align: center;
+  top: 0;
+  width: 100%;
   z-index: 99;
+}
+
+.modal {
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,.5);
+  max-width: 80%;
+  min-width: 250px;
+  padding: 30px;
+  position: relative;
+  text-align: left;
+}
+
+.close {
+  align-items: center;
+  cursor: pointer;
+  display: flex;
+  height: 30px;
+  justify-content: center;
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  transition: color .35s;
+  width: 30px;
+}
+
+.close:hover:before {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.close:before {
+  background-color: #f4f4f4;
+  border-radius: 50%;
+  content: '';
+  display: block;
+  height: 100%;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  transform: scale(0);
+  transition: .35s;
+  width: 100%;
+  z-index: 1;
+}
+
+.close:hover i { color: #ff5a00; }
+
+.close i {
+  font-size: 14px;
+  font-weight: 800;
+  transition: color .3s;
+  z-index: 2;
+}
+
+@media screen and (max-width: 768px) {
+  max-width: 100%;
 }
