--- a/src/components/modal/styles.css
+++ b/src/components/modal/styles.css
@@ -1,6 +1,7 @@
 .modalContainer {
   align-items: center;
-  background-color: rgba(0,0,0,.6);
+  background-color: rgba(30,30,30,0.9);
+  box-sizing: border-box;
   display: flex;
   height: 100%;
   justify-content: center;
@@ -18,6 +19,7 @@
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,.5);
+  box-sizing: border-box;
   max-width: 80%;
   min-width: 250px;
   padding: 30px;
@@ -69,5 +71,5 @@
 }
 
 @media screen and (max-width: 768px) {
-  max-width: 100%;
+  .modal { max-width: 100%; }
 }
