--- a/src/components/form-input/styles.css
+++ b/src/components/form-input/styles.css
@@ -27,6 +27,8 @@
   width: 100%;
 }
 
+.iconPadding .input { padding-left: 40px; }
+
 .input {
   border: 1px solid #eef0f3;
   border-radius: 3px;
@@ -35,8 +37,7 @@
   font-weight: 300;
   height: 40px;
   outline: 0;
-  padding: 10px 0;
-  padding-left: 40px;
+  padding: 10px;
   width: 100%;
   transition: border .2s;
 }
