--- a/src/components/table-pagination/styles.css
+++ b/src/components/table-pagination/styles.css
@@ -1,12 +1,13 @@
 .pagination {
-  display: flex;
   align-items: center;
-  list-style: none;
-  padding-left: 0;
-  font-weight: 300;
+  display: flex;
   font-size: 13px;
-  margin-top: 0;
+  font-weight: 300;
   justify-content: flex-end;
+  list-style: none;
+  margin-bottom: 0;
+  margin-top: 0;
+  padding-left: 0;
 }
 
 .pagination > li {
