--- a/src/components/button-icon/styles.css
+++ b/src/components/button-icon/styles.css
@@ -2,8 +2,11 @@
 
 .button {
   display: flex;
+  height: 30px;
   margin: 0 auto;
+  position: relative;
   transition: color .35s;
+  width: 30px;
 }
 
 .button:before {
@@ -50,7 +53,6 @@
   color: #fff;
   font-size: 12px;
   left: 50%;
-  max-width: 120px;
   opacity: 0;
   padding: 5px;
   position: absolute;
@@ -59,6 +61,7 @@
   transform: translateX(-50%);
   transition: opacity .3s;
   visibility: hidden;
+  width: 100px;
   z-index: 1;
 }
 
