--- a/src/modules/user/contact/view/styles.css
+++ b/src/modules/user/contact/view/styles.css
@@ -27,6 +27,8 @@
   float: right;
 }
 
+.title i { margin-top: -5px; }
+
 @media screen and (max-width: 1024px) {
   .buttonContainer { width: 40%; }
 }
