--- a/src/modules/user/purchases/purchase-table/styles.css
+++ b/src/modules/user/purchases/purchase-table/styles.css
@@ -1,7 +1,7 @@
 .tdButton {
   display: flex;
   padding: 15px 10px;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .tdButton > div { margin: 0 3px; }
