--- a/src/components/table-pagination/styles.css
+++ b/src/components/table-pagination/styles.css
@@ -35,7 +35,7 @@
   position: absolute;
   top: 0;
   transform: scale(0);
-  transition: all .35s;
+  transition: transform .35s;
   width: 100%;
   z-index: 1;
 }
@@ -64,4 +64,11 @@
   cursor: default;
 }
 
-.pagination > li > a { z-index: 2; }
+.pagination > li > a {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  width: 100%;
+  z-index: 2;
+}
