--- a/src/modules/user/address-new/new-address-form/styles.css
+++ b/src/modules/user/address-new/new-address-form/styles.css
@@ -1,21 +1,14 @@
 .container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-.container article {
-  margin-right: 3%;
-  flex-basis: 48.5%;
-}
-
-.container article:nth-child(2n+2) {
-  margin-right: 0;
-}
+.container article { flex-basis: 48.5%; }
 
 @media screen and (max-width: 768px) {
   .container article {
     flex-basis: 100%;
     width: 100%;
-    margin-right: 0;
   }
 }
