--- a/src/modules/user/contact-new/new-contact-form/styles.css
+++ b/src/modules/user/contact-new/new-contact-form/styles.css
@@ -1,16 +1,10 @@
 .container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-.container article {
-  margin-right: 3%;
-  flex-basis: 48.5%;
-}
-
-.container article:nth-child(2n+2) {
-  margin-right: 0;
-}
+.container article { flex-basis: 48.5%; }
 
 @media screen and (max-width: 768px) {
   .container article {
