--- a/src/components/toaster/styles.css
+++ b/src/components/toaster/styles.css
@@ -7,7 +7,7 @@
   color: #fff;
   display: flex;
   font-size: 14px;
-  justify-content: space-between;
+  justify-content: center;
   left: 0;
   margin: auto;
   max-height: 168px;
