--- a/src/modules/user/bills/view/styles.css
+++ b/src/modules/user/bills/view/styles.css
@@ -18,14 +18,14 @@
   margin-bottom: 20px;
 }
 
-.searchContainer {
-  width: 50%;
-}
+.searchContainer { width: 50%; }
 
 .buttonContainer {
   width: 25%;
   float: right;
 }
+
+.tableContainer { margin-top: 80px; }
 
 @media screen and (max-width: 1024px) {
   .buttonContainer { width: 40%; }
