--- a/src/components/info/styles.css
+++ b/src/components/info/styles.css
@@ -29,9 +29,14 @@
 }
 
 .link {
+  border-bottom: 1px solid;
   cursor: pointer;
   font-size: 15px;
-  margin-left: 5px;
+  font-weight: 800;
+  margin-left: 7px;
+  transition: .3s border-bottom;
 }
 
-.link:hover { text-decoration: underline; }
+.link:hover { border-bottom: none; }
+
+.boldIcon { font-weight: 800; }
