--- a/src/modules/catalog/domains/domains-table/styles.css
+++ b/src/modules/catalog/domains/domains-table/styles.css
@@ -81,3 +81,19 @@
 }
 
 .tabLink:hover { border-color: transparent; }
+
+.addCart {
+  background-color: #ff5a00;
+  border-radius: 20px;
+  border: 0;
+  color: #fff;
+  cursor: pointer;
+  font-size: 14px;
+  padding: 5px 15px;
+  transition: background-color .3s;
+  width: 100%;
+}
+
+.addCart:hover {
+  background-color: #ff7326;
+}
