Improve view of card on detail

--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -25,7 +25,10 @@
 .logo {
   display: inline-block;
   width: 220px;
+  text-align: center;
 }
+
+.logo a { display: inline-block; }
 
 .logo img {
   display: block;
