--- a/src/modules/sales/payment-details/payment-cart-product/styles.css
+++ b/src/modules/sales/payment-details/payment-cart-product/styles.css
@@ -3,8 +3,11 @@
   display: flex;
   justify-content: space-between;
   padding: 15px;
-  background-color: #fafafa;
+  transition: background-color .3s;
+  background-color: #fff;
 }
+
+.container:nth-child(even) { background-color: #fafafa; }
 
 .container > div:nth-child(1) {
   height: 35px;
@@ -44,7 +47,7 @@
 }
 
 .period {
-  color: #aaa;
+  color: #ccc;
   font-size: 12px;
   font-weight: 300;
 }
