--- a/src/modules/home/products/styles.css
+++ b/src/modules/home/products/styles.css
@@ -4,17 +4,11 @@
   margin-top: 48px;
 }
 
-.container article {
-  flex-basis: 30%;
-}
+.container a { flex-basis: 30%; }
 
-.container article:nth-child(2) i {
-  margin-top: -5px;
-}
+.container a:nth-child(2) i { margin-top: -5px; }
 
-.container article:nth-child(3) i {
-  margin-top: -7px;
-}
+.container a:nth-child(3) i { margin-top: -7px; }
 
 .container h3 {
   color: #444;
